Worked on the review section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,61 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+
+    <!-- OUR STORY -->
+
+    <div id="our_story" class="comtainer-fluid">
+      <div class="row">
+        <div class="col-sm-4 col-xs-offset-1">
+          <h1>Our Story</h1>
+          <h3>One Man. One Dream.</h3>
+        </div>
+        <div class="col-sm-5 col-sm-offset-1">
+          <h2 id="story_year">1982</h2>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+            adipisci aut repudiandae illum inventore quia quam quod praesentium
+            magni velit, reprehenderit ad exercitationem animi impedit
+            recusandae? Quaerat amet voluptates nostrum!
+          </p>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            recusandae quam quo error placeat, amet deleniti ut exercitationem
+            est quos sint, voluptatum delectus sed eligendi quas at facilis,
+            optio fugit.
+          </p>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, debitis
+            animi atque quas est, maxime modi aliquid possimus magnam provident
+            ratione esse aperiam nam sit mollitia voluptatem minus voluptatibus
+            culpa.
+          </p>
+          <p class="text-justify">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
+            eum ratione, blanditiis expedita, accusantium sit in repellendus
+            laudantium corrupti sunt doloremque aspernatur distinctio numquam
+            cumque quos esse illum delectus exercitationem.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- OUR STORY ENDS -->
+    <!-- REVIEW SECTION -->
+    <div id="review" class="container-fluid">
+      <div class="row text-center">
+        <div class="col-sm-8 center">
+          <h1 class="text_shadow">Fresno Bee</h1>
+          <p class="text_shadow">
+            "THe freshest and best ingredients come together to make some of the
+            best food I have ever ate. You can really taste the Center Valley in
+            every bite."
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- REVIEW ENDS -->
+
     <!-- javascript	 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
