Finished the menu and contact section in html but we need to work on css for the sections

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <h3>One Man. One Dream.</h3>
         </div>
         <div class="col-sm-5 col-sm-offset-1">
+          <!-- ADD A MEDIA QUERIES TO THE 1985 SO IT RESPONSIVE -->
           <h2 id="story_year">1982</h2>
           <p class="text-justify">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
@@ -170,6 +171,355 @@
     </div>
 
     <!-- REVIEW ENDS -->
+    <!-- MENU SECTION -->
+
+    <div id="menu">
+      <div class="container">
+        <div class="row text-center">
+          <h1>Menu</h1>
+        </div>
+        <div class="navbar">
+          <ul class="nav nav-tabs nav-justified">
+            <li class="active">
+              <a href="#appetizer" data-toggle="tab">Appetizer</a>
+            </li>
+            <li><a href="#lunch" data-toggle="tab">Lunch</a></li>
+            <li><a href="#dinner" data-toggle="tab">Dinner</a></li>
+            <li><a href="#dessert" data-toggle="tab">Dessert</a></li>
+          </ul>
+          <div class="tab-content">
+            <div id="appetizer" class="tab-pane fade active">
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dip.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Neque veniam voluptas, quam recusandae nobis quod inventore
+                  iusto sequi! Alias, provident optio beatae quam recusandae
+                  atque ratione!
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/eggplant.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Tempora, commodi dolorem. At praesentium dolore cum sapiente,
+                  quis repudiandae provident obcaecati expedita sequi, quaerat
+                  consectetur quasi rem?
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/meat.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Quasi provident vero deleniti debitis nihil voluptas
+                  voluptatum magnam, facilis alias laudantium maiores, cumque
+                  similique quaerat, quos qui?
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/bruschetta.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  blanditiis iure, cum minima temporibus possimus saepe quod
+                  illo accusantium ratione assumenda, nostrum repellendus
+                  inventore! Voluptate, aspernatur.
+                </p>
+              </div>
+            </div>
+            <div id="lunch" class="tab-pane fade">
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/lunch1.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  blanditiis maxime non molestias rem unde, quam corporis a
+                  repellat! Delectus, quos adipisci nisi nesciunt a eaque?
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/lunch2.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos
+                  dicta odio similique ullam commodi eligendi. Consequuntur
+                  animi at explicabo iste voluptate, reprehenderit corrupti
+                  dolorum natus culpa!
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/lunch3.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Deleniti, ab? Numquam laborum ipsum similique. Dicta eius
+                  neque fugit ullam mollitia tenetur aspernatur explicabo
+                  molestiae beatae quos.
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/lunch4.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Voluptatum facere voluptatem reiciendis laboriosam? Neque
+                  ratione aspernatur natus repudiandae totam, eaque alias
+                  laudantium a soluta delectus corrupti!
+                </p>
+              </div>
+            </div>
+            <div id="dinner" class="tab-pane fade">
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dinner1.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Dolore ut aliquid praesentium adipisci repudiandae aperiam,
+                  ratione ex temporibus nisi, sapiente iure quasi tempora beatae
+                  voluptas nam!
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dinner2.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repellat nostrum autem voluptates adipisci minus odio
+                  similique. Laudantium, qui. Aliquam laboriosam totam tempore
+                  consequuntur aspernatur molestiae quod.
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dinner3.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Perferendis exercitationem minus assumenda dicta omnis.
+                  Officia totam optio error ut, vero ab culpa harum rem
+                  dignissimos reiciendis.
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dinner4.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Placeat, inventore temporibus consequatur amet soluta quidem,
+                  aspernatur iure animi, enim assumenda dolore alias excepturi
+                  sint quae odit.
+                </p>
+              </div>
+            </div>
+            <div id="dessert" class="tab-pane fade">
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dessert1.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                  assumenda sapiente ipsum perspiciatis? Alias, id similique
+                  sint natus, quis perferendis nesciunt, laudantium quos cum
+                  officia quam!
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dessert2.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Asperiores distinctio sit porro minus cumque in, minima
+                  nostrum maxime praesentium consequatur, labore earum odio,
+                  quisquam veritatis officia?
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dessert3.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nostrum enim, ducimus repellendus harum distinctio facere.
+                  Tenetur exercitationem corporis fugiat modi, cumque rerum quia
+                  harum sapiente iusto!
+                </p>
+              </div>
+              <div class="col-sm-3 col-xs-6 food">
+                <img
+                  src="img/dessert4.jpg"
+                  alt=""
+                  class="img-thumbnail img-responsive"
+                />
+                <h3></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Fugiat laboriosam qui totam quo, id, repellendus sit et,
+                  reiciendis modi facilis aliquid architecto dolor molestias
+                  obcaecati expedita.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- MENU ENDS -->
+    <!-- CONTACT SECTIONV -->
+    <div id="contact">
+      <div class="container-fluid">
+        <div class="col-sm-8 col-sm-offset-2">
+          <div class="row">
+            <col-sm-12>
+              <h1 class="text-uppercase">Contact Us</h1>
+            </col-sm-12>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <p>lorem15</p>
+            </div>
+          </div>
+          <div class="row contact_bottom">
+            <div class="col-sm-6">
+              <div class="col-sm-12 contact_form">
+                <form action="">
+                  <div class="form-group">
+                    <label for="name">Name</label
+                    ><input
+                      type="text"
+                      class="form-control"
+                      id="name"
+                      placeholder="Please type your name"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email</label
+                    ><input
+                      type="email"
+                      class="form-control"
+                      id="email"
+                      placeholder="Please type your email"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="subject">Subject</label
+                    ><input
+                      type="text"
+                      class="form-control"
+                      id="subject"
+                      placeholder="Subject of topic"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Message</label
+                    ><textarea
+                      name="message"
+                      id="message"
+                      cols="30"
+                      rows="3"
+                      class="form-control"
+                    ></textarea>
+                    <div class="checkbox">
+                      <label for="checkbox"
+                        ><input type="checkbox" />I'm not a robot</label
+                      >
+                    </div>
+                    <button type="submit" class="btn btn-default center-block">
+                      Send Message
+                    </button>
+                    <p class="text-center" id="contact_fine_print">
+                      All fields marked<span id="requiredStar"></span>
+                        are mandatory</span
+                      >
+                    </p>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="col-sm-5">
+              <address>
+                <strong>
+                  RESTAURANTE
+                  <br />
+                  123 FULTON ST.
+                  <br />
+                  FRESNO, CA 93783<br />P: (123-456-7890)
+                </strong>
+              </address>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25581.653857534715!2d-119.78627048549255!3d36.72960394703401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise%20South%20Stadium!5e0!3m2!1sen!2sus!4v1571712008718!5m2!1sen!2sus"
+                width="400"
+                height="300"
+                frameborder="0"
+                style="border:0;"
+                allowfullscreen=""
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- CONTACT ENDS -->
 
     <!-- javascript	 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
