Finished the project maybe add alittle bit of changes later

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div id="menu">
       <div class="container">
         <div class="row text-center">
-          <h1>Menu</h1>
+          <h1 class="text_shadow">Menu</h1>
         </div>
         <div class="navbar">
           <ul class="nav nav-tabs nav-justified">
@@ -188,7 +188,7 @@
             <li><a href="#dessert" data-toggle="tab">Dessert</a></li>
           </ul>
           <div class="tab-content">
-            <div id="appetizer" class="tab-pane fade active">
+            <div id="appetizer" class="tab-pane fade in active">
               <div class="col-sm-3 col-xs-6 food">
                 <img
                   src="img/dip.jpg"
@@ -234,7 +234,7 @@
               <div class="col-sm-3 col-xs-6 food">
                 <img
                   src="img/bruschetta.jpg"
-                  alt=""
+                  alt="A picture of a bruschetta"
                   class="img-thumbnail img-responsive"
                 />
                 <h3></h3>
@@ -435,7 +435,7 @@
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <p>lorem15</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi nulla doloremque unde. Laudantium, nihil illum.</p>
             </div>
           </div>
           <div class="row contact_bottom">
